--- a/Space-X/Modules/Detail/View/DetailViewController.xib
+++ b/Space-X/Modules/Detail/View/DetailViewController.xib
@@ -1,10 +1,96 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController" customModule="Space_X" customModuleProvider="target">
+            <connections>
+                <outlet property="articleLabel" destination="Ygh-FZ-eyv" id="vIF-O3-VM6"/>
+                <outlet property="detailsLabel" destination="9SD-Yc-gPb" id="3jY-FP-wrk"/>
+                <outlet property="failuresLabel" destination="U7b-dQ-CL8" id="OJj-Lg-4lI"/>
+                <outlet property="launchDateLabel" destination="giV-ya-fUV" id="L7E-wP-IW5"/>
+                <outlet property="patchImageView" destination="Ltw-A1-5wq" id="Reo-3a-86s"/>
+                <outlet property="view" destination="KRu-c0-eAh" id="bTX-yh-Vcm"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="KRu-c0-eAh">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P6P-17-z2Y">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="1uB-lM-JRF">
+                            <rect key="frame" x="16" y="0.0" width="382" height="284"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PwH-Kh-Imk">
+                                    <rect key="frame" x="0.0" y="0.0" width="382" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ltw-A1-5wq">
+                                    <rect key="frame" x="0.0" y="11" width="382" height="225"/>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9SD-Yc-gPb">
+                                    <rect key="frame" x="0.0" y="248" width="382" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="giV-ya-fUV">
+                                    <rect key="frame" x="0.0" y="260" width="382" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7b-dQ-CL8">
+                                    <rect key="frame" x="0.0" y="272" width="382" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ygh-FZ-eyv">
+                                    <rect key="frame" x="0.0" y="284" width="382" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="1uB-lM-JRF" firstAttribute="top" secondItem="P6P-17-z2Y" secondAttribute="top" id="3Ef-gT-O9p"/>
+                        <constraint firstItem="1uB-lM-JRF" firstAttribute="leading" secondItem="P6P-17-z2Y" secondAttribute="leading" constant="16" id="MzF-UE-3Fc"/>
+                        <constraint firstItem="1uB-lM-JRF" firstAttribute="centerX" secondItem="P6P-17-z2Y" secondAttribute="centerX" id="ekC-h6-IG3"/>
+                        <constraint firstAttribute="bottom" secondItem="1uB-lM-JRF" secondAttribute="bottom" id="gBo-f7-ETV"/>
+                        <constraint firstAttribute="trailing" secondItem="1uB-lM-JRF" secondAttribute="trailing" id="goC-dy-sNH"/>
+                    </constraints>
+                </scrollView>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="yHz-Me-sId"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="yHz-Me-sId" firstAttribute="trailing" secondItem="P6P-17-z2Y" secondAttribute="trailing" id="09d-AF-GWX"/>
+                <constraint firstItem="P6P-17-z2Y" firstAttribute="leading" secondItem="yHz-Me-sId" secondAttribute="leading" id="8bl-tb-YD4"/>
+                <constraint firstItem="yHz-Me-sId" firstAttribute="bottom" secondItem="P6P-17-z2Y" secondAttribute="bottom" id="GPe-4e-hEm"/>
+                <constraint firstItem="P6P-17-z2Y" firstAttribute="top" secondItem="yHz-Me-sId" secondAttribute="top" id="blM-PA-3vw"/>
+                <constraint firstItem="Ltw-A1-5wq" firstAttribute="height" secondItem="KRu-c0-eAh" secondAttribute="height" multiplier="0.25" id="gPs-Cs-3i5"/>
+            </constraints>
+            <point key="canvasLocation" x="15.942028985507248" y="229.6875"/>
+        </view>
     </objects>
+    <resources>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
